--- a/Templates/base.html
+++ b/Templates/base.html
@@ -12,14 +12,29 @@
   </head>
   <body>
     <nav class="navbar navbar-expand-md navbar-light bg-light">
-        <a class="navbar-brand" href="{{ url_for('index')}}">FlaskBlog</a>
+        <a class="navbar-brand" href="{{ url_for('index')}}">Raynor Roofing</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
             <li class="nav-item active">
-                <a class="nav-link" href="#">About</a>
+              <a class="nav-link" href="#">Domestic</a>
+            </li>
+            <li class="nav-item active">
+              <a class="nav-link" href="#">Comercial</a>
+            </li>
+            <li class="nav-item active">
+              <a class="nav-link" href="#">Systems</a>
+            </li>
+            <li class="nav-item active">
+              <a class="nav-link" href="#">Gallery</a>
+            </li>
+            <li class="nav-item active">
+              <a class="nav-link" href="#">Affiliations</a>
+            </li>
+            <li class="nav-item active">
+              <a class="nav-link" href="#">Contact Us</a>
             </li>
             </ul>
         </div>
