Updated the templates to use a customised bootstrap navbar

--- a/Templates/500.html
+++ b/Templates/500.html
@@ -1,5 +1,4 @@
 {% extends 'base.html' %}
-{% block content %}
-
-    {% block title %}Error 500 <br> Internal Server Error, please try again soon. {% endblock %}</h1>
+{% block body %}
+    Error 500 <br> Internal Server Error, please try again soon.
 {% endblock %}
