--- a/Templates/index.html
+++ b/Templates/index.html
@@ -1,17 +1,5 @@
 {% extends 'base.html' %}
-<head>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <style>
-    div {
-    width: 100%;
-    height: 400px;
-    background-image: url('static\CoverBannerWithWatermarks.png');
-    background-repeat: no-repeat;
-    background-size: contain;
-    }
-    </style>
-</head>
 
-{% block content %}
-    <h1>{% block title %}  {% endblock %}</h1>
+{% block body %}
+    <p>Hello world</p>
 {% endblock %}
