Updated the example text for systems and domestic pages, and included links to them in the navbar

--- a/Templates/navbar.html
+++ b/Templates/navbar.html
@@ -10,10 +10,10 @@
           <a class="nav-link active" aria-current="page" href="{{ url_for('domestic') }}">Domestic</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Commercial</a>
+          <a class="nav-link active" aria-current="page" href="{{ url_for('commercial') }}">Commercial</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Systems</a>
+          <a class="nav-link active" aria-current="page" href="{{ url_for('systems') }}">Systems</a>
         </li>
         <li class="nav-item">
           <a class="nav-link active" aria-current="page" href="#">Gallery</a>
