--- a/Templates/404.html
+++ b/Templates/404.html
@@ -1,4 +1,6 @@
 {% extends 'base.html' %}
 {% block body %}
-    Error: 404 <br> Page Not Found
+    <div class = 'container'>
+        <h1 class="text-center"> Error: 404 <br> Page Not Found </h1>
+    </div>
 {% endblock %}
