Updated the internal server errorcode

--- a/Templates/500.html
+++ b/Templates/500.html
@@ -1,4 +1,7 @@
 {% extends 'base.html' %}
 {% block body %}
-    Error 500 <br> Internal Server Error, please try again soon.
+    <div class = 'container'>
+        <h1 class="text-center"> Error: 500 <br> Internal server error </h1>
+        <p class = "text-center">Please try again</p>
+    </div>
 {% endblock %}
