Moved text into separate textfiles, added more subdirectories to static

--- a/Templates/domestic_commercial_systems.html
+++ b/Templates/domestic_commercial_systems.html
@@ -1,5 +1,7 @@
 {% extends 'base.html' %}
 
 {% block body %}
-    {{ txt|safe }}
+    <div class="container">
+        {{ txt|safe }}
+    </div>
 {% endblock %}
