--- a/Templates/index.html
+++ b/Templates/index.html
@@ -1,5 +1,12 @@
 {% extends 'base.html' %}
 
 {% block body %}
-    <p>Hello world</p>
+    <br/><br/>
+    <img src="{{ url_for('static', filename='Images/CoverBannerWithWatermarks.png')}}" width = 100%>
+    <br/><br/>
+    <div class="container">
+        <div class = "starter-template">
+            {{ txt|safe }}
+        </div>
+    </div>
 {% endblock %}
