Tinkered with the text and formatting on the index, using the new css from the previous commit

--- a/Templates/index.html
+++ b/Templates/index.html
@@ -7,6 +7,8 @@
     <div class="container">
         <div class = "starter-template">
             {{ txt|safe }}
+            <br/>
+            <h2>Nottingham &#x2022 Leicester &#x2022 Derby &#x2022 Loughborough</h2>
         </div>
     </div>
 {% endblock %}
