--- a/Templates/domestic_commercial_systems.html
+++ b/Templates/domestic_commercial_systems.html
@@ -3,5 +3,18 @@
 {% block body %}
     <div class="container">
         {{ txt|safe }}
+         <br/><br/>
+        <div class="row">
+            {% for image in images %}
+                <div class="col">
+                  <div class="card box-shadow">
+                    <img class="card-img-top" src="{{ url_for('static', filename='Images/' + image.path )}}" alt="{{ image.alt }}">
+                    <div class="card-body">
+                      <p class="card-text"> {{ image.caption }}</p>
+                    </div>
+                  </div>
+                </div>
+            {% endfor %}
+        </div>
     </div>
 {% endblock %}
