--- a/Templates/navbar.html
+++ b/Templates/navbar.html
@@ -19,7 +19,7 @@
           <a class="nav-link active" aria-current="page" href="#">Gallery</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Affiliations</a>
+          <a class="nav-link active" aria-current="page" href="#">Certifications</a>
         </li>
         <li class="nav-item">
           <a class="nav-link active" aria-current="page" href="{{ url_for('contact_us') }}">Contact Us</a>
