--- a/Templates/navbar.html
+++ b/Templates/navbar.html
@@ -16,10 +16,10 @@
           <a class="nav-link active" aria-current="page" href="{{ url_for('systems') }}">Systems</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Gallery</a>
+          <a class="nav-link active" aria-current="page" href="{{ url_for('gallery') }}">Gallery</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Certifications</a>
+          <a class="nav-link active" aria-current="page" href="{{ url_for('certifications') }}">Certifications</a>
         </li>
         <li class="nav-item">
           <a class="nav-link active" aria-current="page" href="{{ url_for('contact_us') }}">Contact Us</a>
